# cpp_bmp

./: .gitignore  CMakeLists.txt  LICENSE.txt  readme.md
bmp/chardraw/: batch_trans.py
src/: CalcPi.cpp  CharDraw.cpp  Draw.cpp  Freefall.cpp  Test.cpp  Tool.cpp
src/core/: Bmp.cpp  Bmp.h  BmpCore.h  BmpDrawTools.cpp  BmpDrawTools.h  BmpTools.cpp  BmpTools.h  Common.cpp  Common.h  HsvTools.cpp  HsvTools.h  Point.cpp  Point.h
src/test/: BmpAdjustBrSuite.cpp  BmpAdjustBrSuite.h  BmpColorRangeSuite.cpp  BmpColorRangeSuite.h  BmpCopySuite.cpp  BmpCopySuite.h  BmpDrawAreaSuite.cpp  BmpDrawAreaSuite.h  BmpDrawCircleSuite.cpp  BmpDrawCircleSuite.h  BmpDrawLineSuite.cpp  BmpDrawLineSuite.h  BmpDrawPointSuite.cpp  BmpDrawPointSuite.h  BmpDrawPolygonSuite.cpp  BmpDrawPolygonSuite.h  BmpFlipSuite.cpp  BmpFlipSuite.h  BmpResizeSuite.cpp  BmpResizeSuite.h  BmpRotateSuite.cpp  BmpRotateSuite.h  BmpSuite.cpp  BmpSuite.h  BmpTransNoColorSuite.cpp  BmpTransNoColorSuite.h  HsvToolsSuite.cpp  HsvToolsSuite.h  Test.cpp
